--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "deta": "^1.1.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "fs": "^0.0.1-security",
     "next": "13.4.4",
+    "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multistep": "^5.5.8",
     "react-select": "^5.7.3"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
