--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "bcrypt": "^5.1.0",
     "deta": "^1.1.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
@@ -19,11 +20,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multistep": "^5.5.8",
-    "react-select": "^5.7.3"
+    "react-select": "^5.7.3",
+    "voucher-code-generator": "^1.3.0"
   },
   "browser": {
     "fs": false,
     "os": false,
     "path": false
+  },
+  "devDependencies": {
+    "prisma": "^5.0.0"
   }
 }
