--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "deta": "^1.1.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "formik": "^2.4.2",
     "fs": "^0.0.1-security",
-    "next": "13.4.4",
+    "jsonwebtoken": "^9.0.1",
+    "next": "13.4.3",
     "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multistep": "^5.5.8",
     "react-select": "^5.7.3",
-    "voucher-code-generator": "^1.3.0"
+    "voucher-code-generator": "^1.3.0",
+    "yup": "^1.2.0"
   },
   "browser": {
     "fs": false,
