--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multistep": "^5.5.8",
+    "react-redux": "^8.1.2",
     "react-select": "^5.7.3",
     "voucher-code-generator": "^1.3.0",
     "yup": "^1.2.0"
