--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "formik": "^2.4.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
+    "mailgen": "^2.0.27",
     "next": "13.4.3",
     "next-auth": "^4.22.3",
+    "next-qrcode": "^2.5.1",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multistep": "^5.5.8",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.3",
+    "react-to-pdf": "^1.0.1",
     "voucher-code-generator": "^1.3.0",
     "yup": "^1.2.0"
   },
