--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-select": "^5.7.3",
     "react-to-pdf": "^1.0.1",
     "voucher-code-generator": "^1.3.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "browser": {
