--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-multistep": "^5.5.8",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.3",
