--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "nodemailer": "^6.9.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0",
     "react-multistep": "^5.5.8",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.3",
@@ -40,6 +39,8 @@
     "path": false
   },
   "devDependencies": {
-    "prisma": "^5.0.0"
+    "@swc/core": "^1.3.100",
+    "prisma": "^5.0.0",
+    "swc-loader": "^0.2.3"
   }
 }
