--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 3000
+    "files.autoSaveDelay": 3000,
+    "autoclosetabs.numberOfTabsInGroup": 2,
+    "autoclosetabs.tabAgeForAutomaticClosing": 1
 }
