--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.0",
+    "@mui/x-date-pickers": "^6.18.5",
     "@reduxjs/toolkit": "^1.9.5",
     "bcrypt": "^5.1.0",
+    "dayjs": "^1.11.10",
     "deta": "^1.1.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
@@ -24,6 +29,7 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.5",
     "react": "18.2.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "18.2.0",
     "react-multistep": "^5.5.8",
     "react-redux": "^8.1.2",
