--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.0",
     "@mui/x-date-pickers": "^6.18.5",
     "@reduxjs/toolkit": "^1.9.5",
+    "aos": "^2.3.4",
     "bcrypt": "^5.1.0",
     "dayjs": "^1.11.10",
     "deta": "^1.1.0",
