--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.5",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-datepicker": "^4.24.0",
     "react-dom": "18.2.0",
     "react-multistep": "^5.5.8",
@@ -47,7 +48,9 @@
     "path": false
   },
   "devDependencies": {
+    "@playwright/test": "^1.43.0",
     "@swc/core": "^1.3.100",
+    "@types/node": "^20.12.7",
     "prisma": "^5.0.0",
     "swc-loader": "^0.2.3"
   }
