--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
     "mailgen": "^2.0.27",
+    "moment": "^2.30.1",
     "next": "13.4.3",
     "next-auth": "^4.22.3",
     "next-qrcode": "^2.5.1",
