--- a/package.json
+++ b/package.json
@@ -9,41 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.0",
-    "@mui/x-date-pickers": "^6.18.5",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.6",
+    "@mui/x-date-pickers": "^8.21.0",
+    "@reduxjs/toolkit": "^2.11.1",
     "aos": "^2.3.4",
-    "bcrypt": "^5.1.0",
-    "dayjs": "^1.11.10",
-    "deta": "^1.1.0",
+    "bcrypt": "^6.0.0",
+    "dayjs": "^1.11.19",
+    "deta": "^2.0.0",
     "encoding": "^0.1.13",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "eslint": "9.39.1",
+    "eslint-config-next": "16.0.8",
     "exceljs": "^4.4.0",
-    "firebase": "^11.1.0",
-    "formik": "^2.4.2",
+    "firebase": "^12.6.0",
+    "formik": "^2.4.9",
     "fs": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.1",
-    "mailgen": "^2.0.27",
+    "jsonwebtoken": "^9.0.3",
+    "mailgen": "^2.0.32",
     "moment": "^2.30.1",
-    "next": "13.4.3",
-    "next-auth": "^4.22.3",
+    "next": "^16.0.8",
+    "next-auth": "^4.24.13",
     "next-qrcode": "^2.5.1",
-    "node-cron": "^3.0.2",
-    "nodemailer": "^6.9.5",
-    "react": "18.2.0",
-    "react-burger-menu": "^3.0.9",
-    "react-datepicker": "^4.24.0",
-    "react-dom": "18.2.0",
-    "react-multistep": "^5.5.8",
-    "react-redux": "^8.1.2",
-    "react-select": "^5.7.3",
-    "react-to-pdf": "^1.0.1",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.11",
+    "react": "^19.2.1",
+    "react-burger-menu": "^3.1.0",
+    "react-datepicker": "^9.0.0",
+    "react-dom": "^19.2.1",
+    "react-multistep": "^6.1.0",
+    "react-redux": "^9.2.0",
+    "react-select": "^5.10.2",
+    "react-to-pdf": "^2.0.3",
     "voucher-code-generator": "^1.3.0",
     "xlsx": "^0.18.5",
-    "yup": "^1.2.0"
+    "yup": "^1.7.1"
   },
   "browser": {
     "fs": false,
@@ -51,10 +51,10 @@
     "path": false
   },
   "devDependencies": {
-    "@playwright/test": "^1.43.0",
-    "@swc/core": "^1.3.100",
-    "@types/node": "^20.12.7",
-    "prisma": "^5.0.0",
-    "swc-loader": "^0.2.3"
+    "@playwright/test": "^1.57.0",
+    "@swc/core": "^1.15.3",
+    "@types/node": "^24.10.2",
+    "prisma": "^7.1.0",
+    "swc-loader": "^0.2.6"
   }
 }
